<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<!-- 
	<parent>
		<groupId>info.flex-mojos</groupId>
		<artifactId>mojo</artifactId>
		<version>2.0-alpha4-SNAPSHOT</version>
	</parent>
	 -->

	<groupId>info.flex-mojos</groupId>
	<artifactId>test-harness</artifactId>
	<version>2.0-alpha5-SNAPSHOT</version>
	
	<packaging>jar</packaging>
	<name>Flex Mojos Integration Tests</name>

	<build>
		<plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.5</source>
                    <target>1.5</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
            </plugin>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<configuration>
					<filesets>
						<fileset>
							<directory>${basedir}/src/test/resources</directory>
							<includes>
								<!-- Clean executions data -->
								<include>**/coverage.ec</include>
								<include>**/target</include>
							</includes>
							<followSymlinks>false</followSymlinks>
						</fileset>
					</filesets>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.4.3</version>
				<configuration>
				    <argLine>-Xmx1024m -XX:MaxPermSize=256M</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.sonatype.maven.plugin</groupId>
				<artifactId>emma4it-maven-plugin</artifactId>
				<version>1.0</version>
				<configuration>
					<artifactItems>
						<artifactItem>
							<groupId>${pom.groupId}</groupId>
							<artifactId>asdoc-mojo</artifactId>
							<version>${pom.version}</version>
							<type>maven-plugin</type>
						</artifactItem>
						<artifactItem>
							<groupId>${pom.groupId}</groupId>
							<artifactId>encrypter-mojo</artifactId>
							<version>${pom.version}</version>
							<type>maven-plugin</type>
						</artifactItem>
						<artifactItem>
							<groupId>${pom.groupId}</groupId>
							<artifactId>flex-compiler-mojo</artifactId>
							<version>${pom.version}</version>
							<type>maven-plugin</type>
						</artifactItem>
						<artifactItem>
							<groupId>${pom.groupId}</groupId>
							<artifactId>generator-mojo</artifactId>
							<version>${pom.version}</version>
							<type>maven-plugin</type>
						</artifactItem>
						<artifactItem>
							<groupId>${pom.groupId}</groupId>
							<artifactId>html-wrapper-mojo</artifactId>
							<version>${pom.version}</version>
							<type>maven-plugin</type>
						</artifactItem>
						<artifactItem>
							<groupId>${pom.groupId}</groupId>
							<artifactId>optimizer-mojo</artifactId>
							<version>${pom.version}</version>
							<type>maven-plugin</type>
						</artifactItem>
						<artifactItem>
							<groupId>${pom.groupId}</groupId>
							<artifactId>source-mojo</artifactId>
							<version>${pom.version}</version>
							<type>maven-plugin</type>
						</artifactItem>
						<artifactItem>
							<groupId>${pom.groupId}</groupId>
							<artifactId>util</artifactId>
							<version>${pom.version}</version>
							<type>jar</type>
						</artifactItem>
					</artifactItems>
				</configuration>
			</plugin>
		</plugins>
	</reporting>

	<!-- TODO: remove when snapshots are released -->
	<repositories>
		<repository>
			<id>apache.snapshots</id>
			<url>http://people.apache.org/repo/m2-snapshot-repository</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots></snapshots>
		</repository>
	</repositories>
	
	<dependencies>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-embedder</artifactId>
			<version>3.0-SNAPSHOT</version>
		</dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.4</version>
        </dependency>
        <dependency>
            <groupId>emma</groupId>
            <artifactId>emma</artifactId>
            <version>2.0.5312</version>
            <scope>runtime</scope>
        </dependency>
	</dependencies>

</project>
